force-app/main/default/objects/Expense_Report__c/Expense_Report__c.object-meta.xml
<CustomObject>
    <label>Expense Report</label>
    <nameField>
        <displayFormat>EXP-{MM}{YY}{000000}</displayFormat>
        <label>Expense Report #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Expense Reports</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>