force-app/main/default/objects/Expense_Report__c/fields/Employee_Name__c.field-meta.xml
<CustomField>
    <fullName>Employee_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee Name</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Value does not exist or the contact is not an Employee Record Type.</errorMessage>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>Employee</value>
        </filterItems>
        <infoMessage>Please choose a contact with record type = Employee</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Expense Reports</relationshipLabel>
    <relationshipName>Expense_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>