force-app/main/default/objects/Expense_Report__c/fields/Expense_Profile__c.field-meta.xml
<CustomField>
    <fullName>Expense_Profile__c</fullName>
    <formula>($Profile.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expense Profile</label>
    <type>Text</type>
</CustomField>