force-app/main/default/objects/Expense_Report__c/fields/Reason_for_Expense__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Expense__c</fullName>
    <inlineHelpText>i.e. Weekly Expenses, Home Show, CEU Fair, etc.</inlineHelpText>
    <label>Expense Report Description</label>
    <type>TextArea</type>
</CustomField>