force-app/main/default/objects/Expense_Report__c/fields/Total_applied_to_vendor_marketing_fund__c.field-meta.xml
<CustomField>
    <fullName>Total_applied_to_vendor_marketing_fund__c</fullName>
    <label>Total applied to vendor marketing fund</label>
    <summarizedField>Expense_Line_Item__c.Marketing_Fund_Allocation__c</summarizedField>
    <summaryFilterItems>
        <field>Expense_Line_Item__c.To_be_applied_to_vendor_marketing_fund__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Expense_Line_Item__c.Expense_Report__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>