force-app/main/default/objects/Expense_Report__c/fields/Total_Vendor_to_Re_imburse__c.field-meta.xml
<CustomField>
    <fullName>Total_Vendor_to_Re_imburse__c</fullName>
    <label>Total Vendor to Re-imburse</label>
    <summarizedField>Expense_Line_Item__c.Vendor_Contribution__c</summarizedField>
    <summaryFilterItems>
        <field>Expense_Line_Item__c.Vendor_is_to_Re_imburse__c</field>
        <operation>equals</operation>
        <value>TRUE</value>
    </summaryFilterItems>
    <summaryForeignKey>Expense_Line_Item__c.Expense_Report__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>