force-app/main/default/objects/Expense_Report__c/listViews/All_Expense_Reports.listView-meta.xml
<ListView>
    <fullName>All_Expense_Reports</fullName>
    <columns>NAME</columns>
    <columns>Employee_Name__c</columns>
    <columns>Branch__c</columns>
    <columns>Reason_for_Expense__c</columns>
    <columns>Total_Amount__c</columns>
    <columns>Picklist__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All Expense Reports</label>
    <sharedTo></sharedTo>
</ListView>