force-app/main/default/objects/Expense_Report__c/listViews/Contractor_Reps_Expense_Reports.listView-meta.xml
<ListView>
    <fullName>Contractor_Reps_Expense_Reports</fullName>
    <columns>NAME</columns>
    <columns>Employee_Name__c</columns>
    <columns>Branch__c</columns>
    <columns>Reason_for_Expense__c</columns>
    <columns>Total_Amount__c</columns>
    <columns>Picklist__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>User_Profile__c</field>
        <operation>equals</operation>
        <value>Sales Representative - Contractor</value>
    </filters>
    <label>Contractor Reps Expense Reports</label>
    <sharedTo>
        <role>VPofMarketing</role>
    </sharedTo>
</ListView>