force-app/main/default/objects/Expense_Report__c/listViews/My_Expense_Reports.listView-meta.xml
<ListView>
    <fullName>My_Expense_Reports</fullName>
    <columns>NAME</columns>
    <columns>Week_Ending__c</columns>
    <columns>Reason_for_Expense__c</columns>
    <columns>Total_Amount__c</columns>
    <columns>Picklist__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Expense Reports</label>
</ListView>